2005-05-02  Joe Shaw  <joeshaw@novell.com>

	* UnixListener.cs (Init): Remove the call to Cleanup() and the
	method itself, which was not supposed to be here.  We try to
	connect to the socket if it exists instead of deleting it
	undconditionally.

2005-04-30  Ben Maurer  <bmaurer@ximian.com>

	* Stdlib.cs: Comment out usage of `UnmanagedFunctionPointer'. It
	isn't supported in the runtime -- it throws an assert -- so better
	not to use it at all for now.

2005-04-29  Jonathan Pryor <jonpryor@vt.edu>

	* UnixConvert.cs: Fix time_t -> DateTime conversions.  time_t should be
	  assumed to be in the local time zone, so don't mess with UTC shifts.
	  This allows Mono.Unix to produce sane output (e.g. identical to ls(1) or
	  stat(1), instead of several hours different).

2005-04-29  Jonathan Pryor <jonpryor@vt.edu>

	* Stdlib.cs: Make FilePosition slightly more useful by providing a
	  ToString() override which dumps the fpos_t structure contents into a 
	  hex string.  Add Equals(), GetHashCode(), operator==, and operator!=
	  so FilePosition behaves like a value type.

2005-04-21 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* UnixClient.cs:
	* UnixListener.cs: TcpListener/TcpClient clones from Jow Shaw.

2005-04-21 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Mono.Posix.dll.sources: added UnixListener and UnixClient from Joe
	Shaw.

2005-04-21 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* UnixEndPoint.cs: fix from Mono.Posix.

2005-04-20  Jonathan Pryor <jonpryor@vt.edu>

	* Syscall.cs: Make all fork(2) and exec(2) functions `private`.  It
	  currently isn't safe to call these under *any* circumstances.  See also
	  68141, and this pertinent quote from Butenhof's 
	  "Programming with POSIX Threads", p197, s6.1:
	  
	      "When a threaded process calls fork to create a child process,
	      Pthreads specifies that only the thread calling fork exists in the
	      child. ... Pthreads does not 'terminate' the other threads in a forked